deleted unused files

--- a/portfolio creation/portfolio.html
+++ b/portfolio creation/portfolio.html
@@ -333,7 +333,7 @@
       </p>
 
       <p class="copyright">
-        &copy; 2024 <a href="https://github.com/pkprajapati7402">Keerthana</a>. All rights reserved
+        &copy; 2024 <a href="https://github.com/keerthana1065/html-sample-app.git">Keerthana</a>. All rights reserved
       </p>
 
     </div>
